applications/pterodactyl/pterodactyl.yaml
apiVersion: v1
kind: Service
metadata:
  name: pterodactyl-external
  namespace: pterodactyl
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080

---
apiVersion: v1
kind: Endpoints
metadata:
  name: pterodactyl-external
  namespace: pterodactyl
subsets:
  - addresses:
      - ip: 69.62.95.160
    ports:
      - port: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pterodactyl-ingress
  namespace: pterodactyl
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    external-dns.alpha.kubernetes.io/hostname: panel.kevindev.com.br
    external-dns.alpha.kubernetes.io/ttl: "300"
    nginx.ingress.kubernetes.io/proxy-set-headers: "pterodactyl/pterodactyl-headers"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    nginx.ingress.kubernetes.io/client-max-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - panel.kevindev.com.br
    secretName: pterodactyl-tls
  rules:
  - host: panel.kevindev.com.br
    http:
      paths:
      - path: /()(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: pterodactyl-external
            port:
              number: 8080
